--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,8 +1,8 @@
-name: mesa-core22-test
+name: mesa-core22
 base: core22
-summary: mesa libraries for core22 snaps
+summary: mesa drivers for the glvnd-core22 graphics snap
 description: |
-  A content snap containing the mesa libraries and drivers for core 22
+  A content snap containing the dri drivers for core22
 compression: lzo
 version: "0.01"
 
@@ -27,51 +27,6 @@ package-repositories:
     key-server: keyserver.ubuntu.com
 
 parts:
-  apis:
-    # This provides the essential APIs
-    #   o libEGL.so.1
-    #   o libva.so.2
-    #   o libvulkan.so.1
-    #   o libGLX.so.0
-    #
-    plugin: nil
-    stage-packages:
-      - libegl1
-      - libgles2
-      - libvulkan1
-      - libglx0
-    prime:
-      - usr/lib
-      - usr/share/glvnd
-      - -usr/share/X11
-      - -usr/share/bug
-      - -usr/share/doc
-      - -usr/share/lintian
-      - -usr/share/man
-      - etc/glvnd
-      - -etc/vulkan
-
-  drm:
-    # DRM userspace
-    #   o libdrm.so.2
-    plugin: nil
-    stage-packages:
-      - libdrm2
-    prime:
-      - usr/lib
-      - -usr/share/doc
-      - -etc
-
-  va:
-    # Video Acceleration API
-    #   o libva.so.2
-    plugin: nil
-    stage-packages:
-      - libva2
-    prime:
-      - usr/lib
-      - -usr/share
-
   dri:
     # Userspace drivers
     plugin: nil
@@ -82,105 +37,26 @@ parts:
       - mesa-vulkan-drivers
       - libglx-mesa0
     prime:
-      - usr/bin
-      - usr/lib
-      - -usr/share/X11
-      - -usr/share/bug
-      - -usr/share/doc
-      - -usr/share/lintian
-      - -usr/share/man
+      - usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/dri
       - usr/share/vulkan
       - usr/share/drirc.d
-      - etc/vdpau_wrapper.cfg
-      - -etc/vulkan
+      - -*
 
-  x11:
-    # X11 support (not much cost to having this)
-    plugin: nil
-    stage-packages:
-      - libva-x11-2
-      - libx11-xcb1
-      - libxau6
-      - libxcb-dri2-0
-      - libxcb-dri3-0
-      - libxcb-present0
-      - libxcb-sync1
-      - libxcb-xfixes0
-      - libxcb1
-      - libxdamage1
-      - libxdmcp6
-      - libxshmfence1
-    prime:
-      - usr/lib
-      - usr/share/X11
-      - -usr/share/doc
-      - -usr/share/lintian
-      - -usr/share/man
-
-  wayland:
-    # Wayland support (not much cost to having this)
-    plugin: nil
-    stage-packages:
-      - libwayland-client0
-      - libwayland-egl1
-      - libwayland-server0
-    prime:
-      - usr/lib
-      - -usr/share/doc
-
-  apis-i386:
-      # This provides the essential APIs
-      #   o libEGL.so.1
-      #   o libva.so.2
-      #   o libvulkan.so.1
-      #   o libGLX.so.0
-      #
-      plugin: nil
-      stage-packages:
-        - on amd64:
-          - libegl1:i386
-          - libgles2:i386
-          - libvulkan1:i386
-          - libglx0:i386
-      override-prime: |
-        if [ `arch` = "x86_64" ]; then craftctl default; fi
-      prime:
-        - usr/lib
-        - usr/share/glvnd
-        - -usr/share/X11
-        - -usr/share/bug
-        - -usr/share/doc
-        - -usr/share/lintian
-        - -usr/share/man
-        - etc/glvnd
-        - -etc/vulkan
-
-  drm-i386:
-    # DRM userspace
-    #   o libdrm.so.2
-    plugin: nil
-    stage-packages:
-      - on amd64:
-        - libdrm2:i386
-    override-prime: |
-      if [ `arch` = "x86_64" ]; then craftctl default; fi
-    prime:
-      - usr/lib
-      - -usr/share/doc
-      - -etc
-
-  va-i386:
-    # Video Acceleration API
+  va:
+    # Video Acceleration APIs
     #   o libva.so.2
+    #   o libvdpau.so.1
     plugin: nil
     stage-packages:
-      - on amd64:
-        - libva2:i386
-    override-prime: |
-      if [ `arch` = "x86_64" ]; then craftctl default; fi
+      - libva2
+      - libva-x11-2
+      - libva-drm2
+      - libva-wayland2
+      - libvdpau1
     prime:
+      - etc/vdpau_wrapper.cfg
       - usr/lib
-      - -usr/share
+      - -*
 
   dri-i386:
     # Userspace drivers
@@ -193,64 +69,34 @@ parts:
         - mesa-vulkan-drivers:i386
         - libglx-mesa0:i386
     override-prime: |
-      if [ `arch` = "x86_64" ]; then craftctl default; fi
+      if [ ${CRAFT_TARGET_ARCH} = "amd64" ]; then craftctl default; fi
     prime:
-      - usr/bin
-      - usr/lib
-      - -usr/share/X11
-      - -usr/share/bug
-      - -usr/share/doc
-      - -usr/share/lintian
-      - -usr/share/man
+      - usr/lib/i386-linux-gnu/dri
       - usr/share/vulkan
       - usr/share/drirc.d
-      - etc/vdpau_wrapper.cfg
-      - -etc/vulkan
+      - -*
 
-  x11-i386:
-    # X11 support (not much cost to having this)
+  va-i386:
+    # Video Acceleration API
+    #   o libva.so.2
+    #   o libvdpau.so.1
     plugin: nil
     stage-packages:
       - on amd64:
+        - libva2:i386
         - libva-x11-2:i386
-        - libx11-xcb1:i386
-        - libxau6:i386
-        - libxcb-dri2-0:i386
-        - libxcb-dri3-0:i386
-        - libxcb-present0:i386
-        - libxcb-sync1:i386
-        - libxcb-xfixes0:i386
-        - libxcb1:i386
-        - libxdamage1:i386
-        - libxdmcp6:i386
-        - libxshmfence1:i386
+        - libva-drm2:i386
+        - libva-wayland2:i386
+        - libvdpau1:i386
     override-prime: |
-      if [ `arch` = "x86_64" ]; then craftctl default; fi
+      if [ ${CRAFT_TARGET_ARCH} = "amd64" ]; then craftctl default; fi
     prime:
       - usr/lib
-      - usr/share/X11
-      - -usr/share/doc
-      - -usr/share/lintian
-      - -usr/share/man
-
-  wayland-i386:
-    # Wayland support (not much cost to having this)
-    plugin: nil
-    stage-packages:
-      - on amd64:
-        - libwayland-client0:i386
-        - libwayland-egl1:i386
-        - libwayland-server0:i386
-    override-prime: |
-      if [ `arch` = "x86_64" ]; then craftctl default; fi
-    prime:
-      - usr/lib
-      - -usr/share/doc
+      - -*
 
 slots:
-  graphics-core22:
+  glvnd-driver-core22:
     interface: content
     source:
       read:
-        - $SNAP/etc
-        - $SNAP/usr
+        - $SNAP
