--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -32,15 +32,13 @@ parts:
     plugin: nil
     stage-packages:
       - libgl1-mesa-dri
-      - va-driver-all
-      - vdpau-driver-all
       - mesa-vulkan-drivers
       - libglx-mesa0
     prime:
       - usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/dri
+      - usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/libdrm_*
       - usr/share/vulkan
       - usr/share/drirc.d
-      - -*
 
   va:
     # Video Acceleration APIs
@@ -53,10 +51,13 @@ parts:
       - libva-drm2
       - libva-wayland2
       - libvdpau1
+      - va-driver-all
+      - vdpau-driver-all
     prime:
       - etc/vdpau_wrapper.cfg
-      - usr/lib
-      - -*
+      - usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/libva-*
+      - usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/libvdpau-*
+      - usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/vdpau
 
   dri-i386:
     # Userspace drivers
@@ -64,17 +65,15 @@ parts:
     stage-packages:
       - on amd64:
         - libgl1-mesa-dri:i386
-        - va-driver-all:i386
-        - vdpau-driver-all:i386
         - mesa-vulkan-drivers:i386
         - libglx-mesa0:i386
     override-prime: |
       if [ ${CRAFT_TARGET_ARCH} = "amd64" ]; then craftctl default; fi
     prime:
       - usr/lib/i386-linux-gnu/dri
+      - usr/lib/i386-linux-gnu/libdrm_*
       - usr/share/vulkan
       - usr/share/drirc.d
-      - -*
 
   va-i386:
     # Video Acceleration API
@@ -88,11 +87,14 @@ parts:
         - libva-drm2:i386
         - libva-wayland2:i386
         - libvdpau1:i386
+        - va-driver-all:i386
+        - vdpau-driver-all:i386
     override-prime: |
       if [ ${CRAFT_TARGET_ARCH} = "amd64" ]; then craftctl default; fi
     prime:
-      - usr/lib
-      - -*
+      - usr/lib/i386-linux-gnu/libva-*
+      - usr/lib/i386-linux-gnu/libvdpau-*
+      - usr/lib/i386-linux-gnu/vdpau
 
 slots:
   glvnd-driver-core22:
