--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -14,19 +14,25 @@ jobs:
 
     timeout-minutes: 30
 
+    strategy:
+      matrix:
+        platform:
+        - amd64
+        - armhf
+        - arm64
+        - ppc64el
+        # Broken: - s390x
+
     steps:
     - name: Check out code
       uses: actions/checkout@v2
       with:
         fetch-depth: 0  # needed for version determination
 
-    - name: Patch Mir channel
-      run: |
-        sed -i 's@- mir-core20@\0/latest/edge@' snap/snapcraft.yaml
-
     - name: Build and publish the snap
-      uses: canonical/actions/build-snap@release
+      uses: canonical/actions/build-snap@multiarch
       with:
+        architecture: ${{ matrix.platform }}
         snapcraft-token: ${{ secrets.SNAPCRAFT_TOKEN }}
         publish: ${{ github.event_name == 'pull_request' && github.repository == github.event.pull_request.head.repo.full_name }}
         publish-channel: edge/pr${{ github.event.number }}
