--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -19,7 +19,7 @@ jobs:
         - armhf
         - arm64
         - ppc64el
-        # Broken: - s390x
+        - s390x
 
     steps:
     - name: Check out code
@@ -29,10 +29,11 @@ jobs:
 
     - name: Build and publish the snap
       id: build-snap
-      uses: canonical/actions/build-snap@multiarch
+      uses: canonical/actions/build-snap@release
       with:
         architecture: ${{ matrix.platform }}
         snapcraft-token: ${{ secrets.SNAPCRAFT_TOKEN }}
+        launchpad-credentials: ${{ secrets.LAUNCHPAD_CREDENTIALS }}
         publish: ${{ github.event_name == 'pull_request' && github.repository == github.event.pull_request.head.repo.full_name }}
         publish-channel: edge/pr${{ github.event.number }}
 
