--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -16,10 +16,10 @@ jobs:
       matrix:
         platform:
         - amd64
-        - armhf
-        - arm64
-        - ppc64el
-        - s390x
+        # Not ready yet - armhf
+        # Not ready yet - arm64
+        # Not ready yet - ppc64el
+        # Not ready yet - s390x
 
     steps:
     - name: Check out code
@@ -33,12 +33,13 @@ jobs:
       with:
         architecture: ${{ matrix.platform }}
         snapcraft-token: ${{ secrets.SNAPCRAFT_TOKEN }}
+        snapcraft-channel: candidate
         launchpad-credentials: ${{ secrets.LAUNCHPAD_CREDENTIALS }}
         publish: ${{ github.event_name == 'pull_request' && github.repository == github.event.pull_request.head.repo.full_name }}
         publish-channel: edge/pr${{ github.event.number }}
 
     - name: Test the snap
-      if: ${{ matrix.platform == 'amd64' }}
+      if: ${{ false && matrix.platform == 'amd64' }}
       run: |
         sudo snap install --dangerous ${{ steps.build-snap.outputs.snap-path }}
         sudo snap install mir-test-tools --channel 22/stable
