--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -26,9 +26,6 @@ architectures:
   - build-on: amd64
   - build-on: arm64
   - build-on: armhf
-  - build-on: ppc64el
-  - build-on: s390x
-  - build-on: riscv64
 
 package-repositories:
   - type: apt
@@ -38,6 +35,14 @@ package-repositories:
     architectures: [i386]
     key-id: F6ECB3762474EDA9D21B7022871920D1991BC93C
     key-server: keyserver.ubuntu.com
+  - type: apt
+    url: https://ppa.launchpadcontent.net/kisak/kisak-mesa/ubuntu
+    suites: [jammy]
+    components: [main]
+    architectures: [amd64, arm64, armhf, i386]
+    key-id: EB8B81E14DA65431D7504EA8F63F0F2B90935439
+    key-server: keyserver.ubuntu.com
+    priority: prefer
 
 parts:
   apis:
